# router/router.go
@@ -5,12 +5,12 @@ import (
 	"github.com/gofiber/fiber/v2"
 	"github.com/gofiber/fiber/v2/middleware/cors"
 	"github.com/guimaraaes/golang_fiber_with_neo4j/handler"
-	"github.com/guimaraaes/golang_fiber_with_neo4j/repository_algorithms"
 )
 
 func Routes(app *fiber.App) {
 	//cors
 	app.Use(cors.New())
+
 	//swagger
 	app.Use("/swagger", swagger.Handler)
 
@@ -30,15 +30,15 @@ func Routes(app *fiber.App) {
 	app.Get("/person", handler.GetPerson)
 	app.Get("/person/:name/:born", handler.GetPersonId)
 	app.Post("/person", handler.PostPerson)
-	app.Post("/person_with_relationship", handler.PostPersonWithRelationship)
-	app.Post("/GETperson_with_relationship", handler.GetPersonRel)
+	app.Post("/person/with_relationship", handler.PostPersonWithRelationship)
+	app.Post("/person/GETwith_relationship", handler.GetPersonRel)
 	app.Put("/person/:name/:born", handler.PutPerson)
 	app.Delete("/person/:name/:born", handler.DeletePerson)
 
 	//algorithms
-	app.Get("/algo_centrality/:node/:relationship", repository_algorithms.Centrality)
-	app.Get("/algo_community/:node/:relationship", repository_algorithms.Community)
-	app.Get("/algo_path/:node/:relationship", repository_algorithms.Path)
-	app.Get("/algo_pagerank/:node/:relationship", repository_algorithms.PageRank)
+	app.Get("/algo_centrality/:node/:relationship", handler.Centrality)
+	app.Get("/algo_community/:node/:relationship", handler.Community)
+	app.Get("/algo_path/:node/:relationship", handler.Path)
+	app.Get("/algo_pagerank/:node/:relationship", handler.PageRank)
 
 }
